fix: Make gridster item background dark for dark mode

--- a/src/main/angular/src/styles.scss
+++ b/src/main/angular/src/styles.scss
@@ -64,6 +64,10 @@
   img.diagram, .diagram > svg {
     filter: invert(100%);
   }
+
+  gridster-item {
+    background-color: $default-bg;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
